# rag-bit

./: .gitignore  README.md  create_chunks.py  embeddings.py  generate_and_store_embeddings.py  generate_result.py  langchain_doc_loader.py  load_data.py  loading_db.py  main.py  pyproject.toml  pyvenv.cfg  render.yaml  requirements.txt  requiremets.txt  tempCodeRunnerFile.py  test.py
RAG/: .gitignore  generate_result.py  main.py  pyvenv.cfg  requirements.txt
RAG/results/: chunks.txt
questions_answers/: text.txt
results/: embeddings.txt  similarity.txt
