[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-bot"
version = "0.1.0"
description = "A description of the RAG bot project"
authors = ["Your Name <your.email@example.com>"]
dependencies = [
    "streamlit",  # specify version if needed
    "pysqlite-binary"  # required if additional SQLite functionality is needed
]

# Optional tool-specific or development dependencies can be added here.
